# PRASTAV_AI

./: README.md  README_old.md  _2024-11-09_14-13-12.md  pyproject.toml
output/: finance_Review_task_2025-01-30_11-52-23.md  finance_Review_task_2025-01-30_14-15-29.md  finance_Review_task_2025-01-30_16-28-17.md  praposal_writing_task_2024-11-09_14-51-50.md  praposal_writing_task_2024-11-09_15-15-12.md  praposal_writing_task_2024-11-12_13-37-36.md  praposal_writing_task_2024-11-26_16-25-16.md  praposal_writing_task_2024-11-28_11-28-41.md  praposal_writing_task_2025-01-30_11-52-23.md  praposal_writing_task_2025-01-30_14-15-29.md  praposal_writing_task_2025-01-30_16-28-17.md  project_analysis_task_2024-11-09_14-51-50.md  project_analysis_task_2024-11-09_15-15-12.md  project_analysis_task_2024-11-09_16-22-17.md  project_analysis_task_2024-11-12_13-37-36.md  project_analysis_task_2024-11-26_16-25-16.md  project_analysis_task_2024-11-28_11-28-41.md  project_analysis_task_2025-01-30_11-52-23.md  project_analysis_task_2025-01-30_14-15-29.md  project_analysis_task_2025-01-30_16-28-17.md  project_planning_task_2024-11-09_14-51-50.md  project_planning_task_2024-11-09_15-15-12.md  project_planning_task_2024-11-09_16-22-17.md  project_planning_task_2024-11-12_13-37-36.md  project_planning_task_2024-11-26_16-25-16.md  project_planning_task_2024-11-28_11-28-41.md  project_planning_task_2025-01-30_11-52-23.md  project_planning_task_2025-01-30_14-15-29.md  project_planning_task_2025-01-30_16-28-17.md
src/prastav_ai/: crew.py  main.py  plan.md
src/prastav_ai/config/: agents.yaml  (+1 more)
