[project]
name = "prastav_ai"
version = "0.1.0"
description = "prastav_AI using crewAI"
authors = [{ name = "Sarvesh Huddedar", email = "Admin@sarvesh.website" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
prastav_ai = "prastav_ai.main:run"
run_crew = "prastav_ai.main:run"
train = "prastav_ai.main:train"
replay = "prastav_ai.main:replay"
test = "prastav_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
